tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__AlchemyWithBlood-AAAAAAAAAAAAAAAAAAABmg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 410,
  "prerequisites": [
    407,
    238
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Not like \"blood alchemy\". You probably will need more than one later, but for now one is sufficient.\n\nPlace an orb in the slot to start crafting, using LP from your network. You'll need higher tier orbs to craft more complicated items.\n\nIf the LP in your network falls to 0 while you're working with this alchemy, you will get a permanent Nausea debuff until it is increased again.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Alchemy With Blood",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    407,
    238
  ],
  "rewards": [],
  "tasks": []
}
