tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__BloodAltarTier3-AAAAAAAAAAAAAAAAAAADng==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 926,
  "prerequisites": [
    409,
    1177
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To make your altar more powerful you need to upgrade it. Add another ring of Blood Runes with a two-high pillar of blood-soaked thaumium blocks at each corner. Top each of the pillars with a block of glowstone.\n\nView the structure preview in NEI or visit [url]https://wiki.gtnewhorizons.com/wiki/Blood_Altar[/url] for images on how it should look.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Blood Altar Tier 3",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    409,
    1177
  ],
  "rewards": [],
  "tasks": []
}
