tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__BloodAltarTier6-AAAAAAAAAAAAAAAAAAADoQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 929,
  "prerequisites": [
    320,
    702,
    703
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The highest tier of the blood altar is tier 6. You need pillars of blood-soaked ichorium 7 blocks high and on top the crystal cluster blocks made out of demon soul shards.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Blood Altar Tier 6",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    320,
    702,
    703
  ],
  "rewards": [],
  "tasks": []
}
